# muse-package-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
combo-test/StepService/: Signal.cs  StepService.cs
combo-test/input/: StepService.cs
combo-test/output/: BuildTest.cs
scripts/: build-test.sh  install-path-test.sh  test.sh  update-test.sh
src/: config.rs  csharp.pest  csharp_parse.rs  lib.rs  main.rs  package.rs  package_source.rs
test/: Main.cs  muse-package.toml
test/main/: Signal.cs  muse-package.toml
