[package]
name = "muse-package-manager"
description = "Package manager for Project Frontier"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
authors = ["CJ Oyer <coyer@nightcycle.us>"]

[lib]
name = "libmuse"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.31"
toml = "0.8.8"
serde = { version = "1.0.197", features = ["derive"] }
walkdir = "2.5.0"
anyhow = "1.0.81"
semver = { version = "1.0.22", features = ["serde"] }
octocrab = "0.38.0"
tokio = {version="1.37.0", features = ["full"]}
futures = "0.3.30"
tempfile = "3.10.1"
reqwest = "0.12.3"
zip = "0.6.6"
bytes = "1.6.0"
pest = "2.7.9"
pest_derive = "2.7.9"

